--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
   <header>
+<header>
+  <!-- ✅ Add this line for logo -->
+  <img src="logo.png" alt="NattyBroz Original Logo" style="height: 100px;">
+
+  <h1>NattyBrozOriginal</h1>
+  <p>200 GSM Oversized Tees | Hoodies | Gymwear</p>
+
     <h1>NattyBrozOriginal</h1>
     <p>200 GSM Oversized Tees | Hoodies | Gymwear</p>
   </header>
