--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
       <p>Warm, heavy & stylish - ₹1299</p>
     </div>
   </section>
+  <section id="founder" style="padding: 40px; text-align: center; background-color: #f9f9f9;">
+  <h2>Meet Our Founder</h2>
+  <p><strong>Md Imran Hussain</strong></p>
+  <p>CEO & Managing Director, NattyBrozOriginal</p>
+  <p>
+    Passionate about streetwear and premium fashion, Imran Hussain founded 
+    <strong>NattyBrozOriginal</strong> to deliver high-quality, stylish, and affordable apparel.
+  </p>
+</section>
+
   <footer>
     <p>Follow us on <a href="https://instagram.com/nattybrozoriginal" target="_blank">Instagram</a></p>
   </footer>
